--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/Theme.MyNewsApp"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup">
+        <activity android:name=".UI.SearchActivity"></activity>
         <activity android:name=".UI.NewsWebViewActivity" />
         <activity android:name=".UI.MainActivity">
             <intent-filter>
